--- a/admin/config.yml
+++ b/admin/config.yml
@@ -26,26 +26,40 @@ collections:
         
       - label: "Author"
         name: "author"
-        widget: "string"
+        widget: "select"
+        options:
+          - "Nick Martin"
+          - "Joe Success Team"
+          - "Marketing"
+          - "Cass Clark"
+          - "Sam Bond"
+          - "joe Team"
         default: "joe Team"
         
       - label: "Category"
         name: "category"
         widget: "select"
         options:
-          - { label: "Shop Spotlight", value: "shop-spotlight" }
-          - { label: "Coffee Tips", value: "coffee-tips" }
-          - { label: "Community", value: "community" }
+          - { label: "Industry Trends", value: "industry-trends" }
+          - { label: "Build In Public", value: "build-in-public" }
+          - { label: "Coffee Shop Owner", value: "coffee-shop-owner" }
           - { label: "Product Updates", value: "product-updates" }
+          - { label: "Loyalty Marketing", value: "loyalty-marketing" }
+          - { label: "Coffee Shop Marketing", value: "coffee-shop-marketing" }
+          - { label: "Mobile Ordering", value: "mobile-ordering" }
+          - { label: "Barista", value: "barista" }
+          - { label: "Community", value: "community" }
         
       - label: "Excerpt"
         name: "excerpt"
         widget: "text"
+        hint: "A brief summary (1-2 sentences) for the blog listing"
         
       - label: "Featured"
         name: "featured"
         widget: "boolean"
         default: false
+        hint: "Show as the main featured post on the blog homepage"
         
       - label: "Body"
         name: "body"
