--- a/admin/config.yml
+++ b/admin/config.yml
@@ -9,6 +9,44 @@ site_url: https://magical-beignet-f08a5b.netlify.app
 logo_url: https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png
 
 collections:
+  # Authors Collection
+  - name: "authors"
+    label: "Authors"
+    folder: "authors"
+    create: true
+    slug: "{{slug}}"
+    extension: "md"
+    fields:
+      - label: "Name"
+        name: "title"
+        widget: "string"
+        
+      - label: "Photo"
+        name: "photo"
+        widget: "image"
+        required: false
+        
+      - label: "Role"
+        name: "role"
+        widget: "string"
+        hint: "e.g. Co-Founder, Marketing, Barista"
+        
+      - label: "Bio"
+        name: "bio"
+        widget: "text"
+        required: false
+        
+      - label: "Email"
+        name: "email"
+        widget: "string"
+        required: false
+        
+      - label: "LinkedIn"
+        name: "linkedin"
+        widget: "string"
+        required: false
+
+  # Blog Posts Collection
   - name: "posts"
     label: "Blog Posts"
     folder: "blog/posts"
@@ -26,15 +64,11 @@ collections:
         
       - label: "Author"
         name: "author"
-        widget: "select"
-        options:
-          - "Nick Martin"
-          - "Joe Success Team"
-          - "Marketing"
-          - "Cass Clark"
-          - "Sam Bond"
-          - "joe Team"
-        default: "joe Team"
+        widget: "relation"
+        collection: "authors"
+        search_fields: ["title"]
+        value_field: "title"
+        display_fields: ["title"]
         
       - label: "Category"
         name: "category"
@@ -54,6 +88,11 @@ collections:
         name: "excerpt"
         widget: "text"
         hint: "A brief summary (1-2 sentences) for the blog listing"
+        
+      - label: "Featured Image"
+        name: "featured_image"
+        widget: "image"
+        required: false
         
       - label: "Featured"
         name: "featured"
