--- a/admin/config.yml
+++ b/admin/config.yml
@@ -103,3 +103,77 @@ collections:
       - label: "Body"
         name: "body"
         widget: "markdown"
+
+  # Testimonials Collection (Partner Stories)
+  - name: "testimonials"
+    label: "Testimonials"
+    folder: "blog/testimonials"
+    create: true
+    slug: "{{slug}}"
+    extension: "md"
+    fields:
+      - label: "Title"
+        name: "title"
+        widget: "string"
+        hint: "e.g. How Surfers Coffee Grew 18% with joe"
+        
+      - label: "Publish Date"
+        name: "date"
+        widget: "datetime"
+        
+      - label: "Author"
+        name: "author"
+        widget: "relation"
+        collection: "authors"
+        search_fields: ["title"]
+        value_field: "title"
+        display_fields: ["title"]
+        
+      - label: "Shop Name"
+        name: "shop_name"
+        widget: "string"
+        hint: "e.g. Surfers Coffee, Caffe Ladro"
+        
+      - label: "Location"
+        name: "location"
+        widget: "string"
+        required: false
+        hint: "e.g. Wahiawa, Hawaii"
+        
+      - label: "Category"
+        name: "category"
+        widget: "select"
+        options:
+          - { label: "joe POS", value: "joe-pos" }
+          - { label: "Mobile Ordering", value: "mobile-ordering" }
+          - { label: "Loyalty Marketing", value: "loyalty-marketing" }
+          - { label: "Square Integration", value: "square-integration" }
+          - { label: "Barista Workflow", value: "barista-workflow" }
+          - { label: "Coffee Shop Launch", value: "coffee-shop-launch" }
+        
+      - label: "Highlights"
+        name: "highlights"
+        widget: "list"
+        required: false
+        hint: "Key metrics like '18% revenue increase', '$12K monthly growth'"
+        field: {label: "Highlight", name: "highlight", widget: "string"}
+        
+      - label: "Excerpt"
+        name: "excerpt"
+        widget: "text"
+        hint: "A brief summary for the testimonials listing"
+        
+      - label: "Featured Image"
+        name: "featured_image"
+        widget: "image"
+        required: false
+        
+      - label: "Featured"
+        name: "featured"
+        widget: "boolean"
+        default: false
+        hint: "Show prominently on testimonials page"
+        
+      - label: "Body"
+        name: "body"
+        widget: "markdown"
