--- a/admin/config.yml
+++ b/admin/config.yml
@@ -14,7 +14,6 @@ slug:
   sanitize_replacement: "-"
 
 collections:
-  # Authors Collection
   - name: "authors"
     label: "Authors"
     folder: "authors"
@@ -25,80 +24,70 @@ collections:
       - label: "Name"
         name: "title"
         widget: "string"
-        
       - label: "Photo"
         name: "photo"
         widget: "image"
         required: false
-        
       - label: "Role"
         name: "role"
         widget: "string"
         hint: "e.g. Co-Founder, Marketing, Barista"
-        
       - label: "Bio"
         name: "bio"
         widget: "text"
         required: false
-        
       - label: "Email"
         name: "email"
         widget: "string"
         required: false
-        
       - label: "LinkedIn"
         name: "linkedin"
         widget: "string"
         required: false
 
-  # Blog Posts Collection
   - name: "posts"
     label: "Blog Posts"
     folder: "blog/posts"
     create: true
     slug: "{{slug}}"
     extension: "md"
-    sortable_fields: ['date', 'title']
+    sortable_fields: ["date", "title"]
     view_filters:
       - label: "Published"
         field: status
-        pattern: 'published'
+        pattern: "published"
       - label: "Drafts"
         field: status
-        pattern: 'draft'
+        pattern: "draft"
     view_groups:
       - label: "Category"
         field: category
-      - label: "Year"
-        field: date
-        pattern: '\d{4}'
-    summary: "{{title}} - {{date | date('MMM D, YYYY')}} [{{status}}]"
+    summary: "{{title}} - {{date | date('MMM D, YYYY')}}"
     fields:
       - label: "Title"
         name: "title"
         widget: "string"
-        
       - label: "Slug"
         name: "slug"
         widget: "string"
-        hint: "URL-friendly version (auto-generated from title if empty)"
+        hint: "URL-friendly version"
         required: false
-        
       - label: "Publish Date"
         name: "date"
         widget: "datetime"
         date_format: "YYYY-MM-DD"
         time_format: false
-        
       - label: "Status"
         name: "status"
         widget: "select"
         default: "draft"
         options:
-          - { label: "Draft", value: "draft" }
-          - { label: "Published", value: "published" }
-          - { label: "Scheduled", value: "scheduled" }
-        
+          - label: "Draft"
+            value: "draft"
+          - label: "Published"
+            value: "published"
+          - label: "Scheduled"
+            value: "scheduled"
       - label: "Author"
         name: "author"
         widget: "relation"
@@ -106,76 +95,93 @@ collections:
         search_fields: ["title"]
         value_field: "{{slug}}"
         display_fields: ["title"]
-        
       - label: "Category"
         name: "category"
         widget: "select"
         options:
-          - { label: "Industry Trends", value: "industry-trends" }
-          - { label: "Build In Public", value: "build-in-public" }
-          - { label: "Coffee Shop Owner", value: "coffee-shop-owner" }
-          - { label: "Product Updates", value: "product-updates" }
-          - { label: "Loyalty Marketing", value: "loyalty-marketing" }
-          - { label: "Coffee Shop Marketing", value: "coffee-shop-marketing" }
-          - { label: "Mobile Ordering", value: "mobile-ordering" }
-          - { label: "Barista", value: "barista" }
-          - { label: "Community", value: "community" }
-        
+          - label: "Industry Trends"
+            value: "industry-trends"
+          - label: "Build In Public"
+            value: "build-in-public"
+          - label: "Coffee Shop Owner"
+            value: "coffee-shop-owner"
+          - label: "Product Updates"
+            value: "product-updates"
+          - label: "Loyalty Marketing"
+            value: "loyalty-marketing"
+          - label: "Coffee Shop Marketing"
+            value: "coffee-shop-marketing"
+          - label: "Mobile Ordering"
+            value: "mobile-ordering"
+          - label: "Barista"
+            value: "barista"
+          - label: "Community"
+            value: "community"
       - label: "Tags"
         name: "tags"
         widget: "list"
         required: false
         hint: "Add relevant tags for search and filtering"
-        
       - label: "Excerpt"
         name: "excerpt"
         widget: "text"
-        hint: "A brief summary (1-2 sentences) for the blog listing and SEO"
-        
+        hint: "A brief summary for the blog listing and SEO"
       - label: "Featured Image"
         name: "featured_image"
         widget: "image"
         required: false
-        hint: "Drag & drop or click to upload. Recommended: 1200x630px"
-        
+        hint: "Recommended: 1200x630px"
       - label: "Featured"
         name: "featured"
         widget: "boolean"
         default: false
-        hint: "Show as the main featured post on the blog homepage"
-        
+        hint: "Show as the main featured post"
       - label: "Related Products"
         name: "related_products"
         widget: "list"
         required: false
         hint: "Link to product pages"
         fields:
-          - { label: "Product Name", name: "name", widget: "string" }
-          - { label: "Product URL", name: "url", widget: "string" }
-        
+          - label: "Product Name"
+            name: "name"
+            widget: "string"
+          - label: "Product URL"
+            name: "url"
+            widget: "string"
       - label: "SEO Settings"
         name: "seo"
         widget: "object"
         collapsed: true
         required: false
         fields:
-          - { label: "Meta Title", name: "meta_title", widget: "string", required: false, hint: "Override the default title for search engines" }
-          - { label: "Meta Description", name: "meta_description", widget: "text", required: false, hint: "Override the excerpt for search engines (max 160 chars)" }
-          - { label: "Canonical URL", name: "canonical", widget: "string", required: false }
-          - { label: "No Index", name: "noindex", widget: "boolean", default: false, required: false }
-        
+          - label: "Meta Title"
+            name: "meta_title"
+            widget: "string"
+            required: false
+          - label: "Meta Description"
+            name: "meta_description"
+            widget: "text"
+            required: false
+          - label: "Canonical URL"
+            name: "canonical"
+            widget: "string"
+            required: false
+          - label: "No Index"
+            name: "noindex"
+            widget: "boolean"
+            default: false
+            required: false
       - label: "Body"
         name: "body"
         widget: "markdown"
 
-  # Testimonials Collection
   - name: "testimonials"
     label: "Testimonials"
     folder: "blog/testimonials"
     create: true
     slug: "{{slug}}"
     extension: "md"
-    sortable_fields: ['date', 'title', 'shop_name']
+    sortable_fields: ["date", "title", "shop_name"]
     view_filters:
       - label: "Featured"
         field: featured
@@ -189,26 +195,24 @@ collections:
         name: "title"
         widget: "string"
         hint: "e.g. How Surfers Coffee Grew 18% with joe"
-        
       - label: "Slug"
         name: "slug"
         widget: "string"
         required: false
-        
       - label: "Publish Date"
         name: "date"
         widget: "datetime"
         date_format: "YYYY-MM-DD"
         time_format: false
-        
       - label: "Status"
         name: "status"
         widget: "select"
         default: "published"
         options:
-          - { label: "Draft", value: "draft" }
-          - { label: "Published", value: "published" }
-        
+          - label: "Draft"
+            value: "draft"
+          - label: "Published"
+            value: "published"
       - label: "Author"
         name: "author"
         widget: "relation"
@@ -216,59 +220,64 @@ collections:
         search_fields: ["title"]
         value_field: "{{slug}}"
         display_fields: ["title"]
-        
       - label: "Shop Name"
         name: "shop_name"
         widget: "string"
         hint: "e.g. Surfers Coffee, Caffe Ladro"
-        
       - label: "Location"
         name: "location"
         widget: "string"
         required: false
         hint: "e.g. Wahiawa, Hawaii"
-        
       - label: "Category"
         name: "category"
         widget: "select"
         options:
-          - { label: "joe POS", value: "joe-pos" }
-          - { label: "Mobile Ordering", value: "mobile-ordering" }
-          - { label: "Loyalty Marketing", value: "loyalty-marketing" }
-          - { label: "Square Integration", value: "square-integration" }
-          - { label: "Barista Workflow", value: "barista-workflow" }
-          - { label: "Coffee Shop Launch", value: "coffee-shop-launch" }
-        
+          - label: "joe POS"
+            value: "joe-pos"
+          - label: "Mobile Ordering"
+            value: "mobile-ordering"
+          - label: "Loyalty Marketing"
+            value: "loyalty-marketing"
+          - label: "Square Integration"
+            value: "square-integration"
+          - label: "Barista Workflow"
+            value: "barista-workflow"
+          - label: "Coffee Shop Launch"
+            value: "coffee-shop-launch"
       - label: "Highlights"
         name: "highlights"
         widget: "list"
         required: false
-        hint: "Key metrics like '18% revenue increase', '$12K monthly growth'"
-        
+        hint: "Key metrics like '18% revenue increase'"
       - label: "Excerpt"
         name: "excerpt"
         widget: "text"
         hint: "A brief summary for the testimonials listing"
-        
       - label: "Featured Image"
         name: "featured_image"
         widget: "image"
         required: false
-        
       - label: "Shop Logo"
         name: "shop_logo"
         widget: "image"
         required: false
-        
       - label: "Featured"
         name: "featured"
         widget: "boolean"
         default: false
         hint: "Show prominently on testimonials page"
-        
       - label: "Related Products"
         name: "related_products"
         widget: "list"
         required: false
         fields:
-          - { label: "Product Name", name: "name", widget:
+          - label: "Product Name"
+            name: "name"
+            widget: "string"
+          - label: "Product URL"
+            name: "url"
+            widget: "string"
+      - label: "Body"
+        name: "body"
+        widget: "markdown"
