--- a/admin/config.yml
+++ b/admin/config.yml
@@ -51,7 +51,9 @@ collections:
     create: true
     slug: "{{slug}}"
     extension: "md"
-    sortable_fields: ["date", "title"]
+    sortable_fields:
+      - "date"
+      - "title"
     view_filters:
       - label: "Published"
         field: status
@@ -92,9 +94,11 @@ collections:
         name: "author"
         widget: "relation"
         collection: "authors"
-        search_fields: ["title"]
+        search_fields:
+          - "title"
         value_field: "{{slug}}"
-        display_fields: ["title"]
+        display_fields:
+          - "title"
       - label: "Category"
         name: "category"
         widget: "select"
@@ -136,41 +140,16 @@ collections:
         widget: "boolean"
         default: false
         hint: "Show as the main featured post"
-      - label: "Related Products"
-        name: "related_products"
-        widget: "list"
+      - label: "Meta Title"
+        name: "meta_title"
+        widget: "string"
         required: false
-        hint: "Link to product pages"
-        fields:
-          - label: "Product Name"
-            name: "name"
-            widget: "string"
-          - label: "Product URL"
-            name: "url"
-            widget: "string"
-      - label: "SEO Settings"
-        name: "seo"
-        widget: "object"
-        collapsed: true
+        hint: "Override title for SEO"
+      - label: "Meta Description"
+        name: "meta_description"
+        widget: "text"
         required: false
-        fields:
-          - label: "Meta Title"
-            name: "meta_title"
-            widget: "string"
-            required: false
-          - label: "Meta Description"
-            name: "meta_description"
-            widget: "text"
-            required: false
-          - label: "Canonical URL"
-            name: "canonical"
-            widget: "string"
-            required: false
-          - label: "No Index"
-            name: "noindex"
-            widget: "boolean"
-            default: false
-            required: false
+        hint: "Override excerpt for SEO (max 160 chars)"
       - label: "Body"
         name: "body"
         widget: "markdown"
@@ -181,7 +160,10 @@ collections:
     create: true
     slug: "{{slug}}"
     extension: "md"
-    sortable_fields: ["date", "title", "shop_name"]
+    sortable_fields:
+      - "date"
+      - "title"
+      - "shop_name"
     view_filters:
       - label: "Featured"
         field: featured
@@ -217,9 +199,11 @@ collections:
         name: "author"
         widget: "relation"
         collection: "authors"
-        search_fields: ["title"]
+        search_fields:
+          - "title"
         value_field: "{{slug}}"
-        display_fields: ["title"]
+        display_fields:
+          - "title"
       - label: "Shop Name"
         name: "shop_name"
         widget: "string"
@@ -267,17 +251,6 @@ collections:
         widget: "boolean"
         default: false
         hint: "Show prominently on testimonials page"
-      - label: "Related Products"
-        name: "related_products"
-        widget: "list"
-        required: false
-        fields:
-          - label: "Product Name"
-            name: "name"
-            widget: "string"
-          - label: "Product URL"
-            name: "url"
-            widget: "string"
       - label: "Body"
         name: "body"
         widget: "markdown"
