--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "joe.coffee blog with Eleventy",
   "scripts": {
-    "build": "eleventy",
+    "generate:locations": "node generate-locations.js",
+    "build": "node generate-locations.js && eleventy",
     "serve": "eleventy --serve"
   },
   "dependencies": {
