updated admin dashboard
correct links

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,8 +5,8 @@ backend:
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
 
-site_url: https://joe.coffee
-display_url: https://joe.coffee
+site_url: https://magical-beignet-f08a5b.netlify.app
+display_url: https://magical-beignet-f08a5b.netlify.app
 logo_url: https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png
 
 slug:
@@ -306,7 +306,7 @@ collections:
       - label: "URL Slug"
         name: "slug"
         widget: "string"
-        hint: "URL path: joe.coffee/partners/[slug]"
+        hint: "URL path: /partners/[slug]"
       - label: "Status"
         name: "status"
         widget: "select"
@@ -484,7 +484,7 @@ collections:
       - label: "URL Slug"
         name: "slug"
         widget: "string"
-        hint: "URL path: joe.coffee/campaigns/[slug]"
+        hint: "URL path: /campaigns/[slug]"
       - label: "Status"
         name: "status"
         widget: "select"
