Add supabase dependency for form handler

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@supabase/supabase-js": "^2.78.0",
     "gray-matter": "^4.0.3"
   }
 }
