Add netlify.toml config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
-[build]
-  command = "npm install && npm run build"
-  publish = "_site"
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
 
-[build.environment]
-  NODE_VERSION = "18"
+[functions."submit-lead"]
+  included_files = ["netlify/functions/package.json"]
