--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@11ty/eleventy": "^2.0.1",
     "@supabase/supabase-js": "^2.78.0",
     "gray-matter": "^4.0.3",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "resend": "^2.0.0"
   }
 }
