--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -4,6 +4,7 @@
   "description": "Netlify functions for joe.coffee",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "resend": "^2.0.0"
+    "resend": "^2.0.0",
+    "twilio": "^5.11.1"
   }
 }
