--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -1,10 +1,8 @@
 {
   "name": "joe-netlify-functions",
   "version": "1.0.0",
-  "description": "Netlify functions for joe.coffee",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "resend": "^2.0.0",
-    "twilio": "^5.11.1"
+    "twilio": "^4.23.0",
+    "@supabase/supabase-js": "^2.39.0"
   }
 }
