Add twilio dependency for SMS

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,5 @@
-[functions]
-  directory = "netlify/functions"
-  node_bundler = "esbuild"
+[build]
+  functions = "netlify/functions"
 
-[functions."submit-lead"]
-  included_files = ["netlify/functions/package.json"]
+[functions]
+  node_bundler = "esbuild"
