--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@supabase/supabase-js": "^2.78.0",
     "gray-matter": "^4.0.3",
     "node-fetch": "^2.7.0",
-    "resend": "^2.0.0"
-  }
+    "resend": "^2.0.0",
+    "twilio": "^5.11.1"
+  },
+  "main": ".eleventy.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
