feat: add Zillow for Coffee location pages

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,23 @@
 
 [functions]
   node_bundler = "esbuild"
+
+[[redirects]]
+  from = "/locations/:state/:city/:slug/"
+  to = "/.netlify/functions/location-page?state=:state&city=:city&slug=:slug"
+  status = 200
+
+[[redirects]]
+  from = "/locations/:state/:city/"
+  to = "/.netlify/functions/city-page?state=:state&city=:city"
+  status = 200
+
+[[redirects]]
+  from = "/api/claim"
+  to = "/.netlify/functions/claim-listing"
+  status = 200
+
+[[redirects]]
+  from = "/api/track"
+  to = "/.netlify/functions/track-activity"
+  status = 200
