fix: force redirects for location pages

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,11 +8,23 @@
   from = "/locations/:state/:city/:slug/"
   to = "/.netlify/functions/location-page?state=:state&city=:city&slug=:slug"
   status = 200
+  force = true
+
+[[redirects]]
+  from = "/locations/:state/:city/:slug"
+  to = "/locations/:state/:city/:slug/"
+  status = 301
 
 [[redirects]]
   from = "/locations/:state/:city/"
   to = "/.netlify/functions/city-page?state=:state&city=:city"
   status = 200
+  force = true
+
+[[redirects]]
+  from = "/locations/:state/:city"
+  to = "/locations/:state/:city/"
+  status = 301
 
 [[redirects]]
   from = "/api/claim"
