remove static location generation from build

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "joe.coffee blog with Eleventy",
   "scripts": {
     "generate:locations": "node generate-locations.js",
-    "build": "node generate-locations.js && node generate-api.js && eleventy",
+    "build": "node generate-api.js && eleventy",
     "serve": "eleventy --serve"
   },
   "dependencies": {
