Add sitemap, SEO improvements, homepage updates

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,55 @@
 
 [functions]
   node_bundler = "esbuild"
+
+# Sitemap redirects
+[[redirects]]
+  from = "/sitemap.xml"
+  to = "/.netlify/functions/sitemap"
+  status = 200
+
+[[redirects]]
+  from = "/sitemap-states.xml"
+  to = "/.netlify/functions/sitemap"
+  status = 200
+
+[[redirects]]
+  from = "/sitemap-cities.xml"
+  to = "/.netlify/functions/sitemap"
+  status = 200
+
+[[redirects]]
+  from = "/sitemap-shops-*.xml"
+  to = "/.netlify/functions/sitemap"
+  status = 200
+
+# Location page redirects
+[[redirects]]
+  from = "/locations/:state/:city/:slug/*"
+  to = "/.netlify/functions/location-page"
+  status = 200
+
+[[redirects]]
+  from = "/locations/:state/:city/"
+  to = "/.netlify/functions/city-page"
+  status = 200
+
+[[redirects]]
+  from = "/locations/:state/"
+  to = "/.netlify/functions/state-page"
+  status = 200
+
+[[redirects]]
+  from = "/locations/near-me/*"
+  to = "/.netlify/functions/near-me"
+  status = 200
+
+[[redirects]]
+  from = "/locations/"
+  to = "/.netlify/functions/locations-index"
+  status = 200
+
+[[redirects]]
+  from = "/locations/search/*"
+  to = "/.netlify/functions/locations-search"
+  status = 200
