Fix sitemap-shops wildcard redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -22,7 +22,7 @@
   status = 200
 
 [[redirects]]
-  from = "/sitemap-shops-*.xml"
+  from = "/sitemap-shops-:num.xml"
   to = "/.netlify/functions/sitemap"
   status = 200
 
