Add explicit sitemap-shops redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -56,3 +56,27 @@
   from = "/locations/search/*"
   to = "/.netlify/functions/locations-search"
   status = 200
+[[redirects]]
+  from = "/sitemap-shops-1.xml"
+  to = "/.netlify/functions/sitemap"
+  status = 200
+
+[[redirects]]
+  from = "/sitemap-shops-2.xml"
+  to = "/.netlify/functions/sitemap"
+  status = 200
+
+[[redirects]]
+  from = "/sitemap-shops-3.xml"
+  to = "/.netlify/functions/sitemap"
+  status = 200
+
+[[redirects]]
+  from = "/sitemap-shops-4.xml"
+  to = "/.netlify/functions/sitemap"
+  status = 200
+
+[[redirects]]
+  from = "/sitemap-shops-5.xml"
+  to = "/.netlify/functions/sitemap"
+  status = 200
