--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.3",
     "node-fetch": "^2.7.0",
     "resend": "^2.0.0",
+    "stripe": "^20.1.0",
     "twilio": "^5.11.1"
   },
   "main": ".eleventy.js",
