Add shop products list page

--- a/netlify.toml
+++ b/netlify.toml
@@ -28,6 +28,16 @@
 
 # Location page redirects
 [[redirects]]
+[[redirects]]
+  from = "/locations/:state/:city/:slug/products/"
+  to = "/.netlify/functions/shop-products"
+  status = 200
+
+[[redirects]]
+  from = "/locations/:state/:city/:slug/products"
+  to = "/.netlify/functions/shop-products"
+  status = 200
+
   from = "/locations/:state/:city/:slug/*"
   to = "/.netlify/functions/location-page"
   status = 200
