--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@supabase/supabase-js": "^2.78.0",
+    "dotenv": "^17.2.3",
     "gray-matter": "^4.0.3",
     "node-fetch": "^2.7.0",
     "resend": "^2.0.0",
